fix: 修复考试记录session_id缺失及多项前后端功能完善
修复exam_records表session_id字段缺失导致查询失败的问题，
完善考试、练习、错题本等功能模块的前后端交互。

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>